# ml

./: pyproject.toml
.devcontainer/: devcontainer.json
src/: config_manager.py
src/conf/: config.yaml
src/pipelines/: feature_pipeline.py
src/scripts/: load_data.py  train_model.py  turn_raw_data.py
